--- a/build.settings
+++ b/build.settings
@@ -13,12 +13,12 @@ settings =
 		default = "portrait",
 		supported = { "portrait", },
 	},
-	
+
 	excludeFiles =
 	{
 		-- Include only the necessary icon files on each platform
-		iphone = { "Icon-*dpi.png", },
-		android = { "Icon.png", "Icon-Small-*.png", "Icon*@2x.png", },
+		iphone = { "imgs/icons/Icon-*dpi.png", },
+		android = { "imgs/icons/Icon.png", "imgs/icons/Icon-Small-*.png", "imgs/icons/Icon*@2x.png", },
 	},
 
 	--
@@ -34,27 +34,27 @@ settings =
 
 			CFBundleIconFiles =
 			{
-				"Icon.png",
-				"Icon@2x.png",
-				"Icon-167.png",
-				"Icon-60.png",
-				"Icon-60@2x.png",
-				"Icon-60@3x.png",
-				"Icon-72.png",
-				"Icon-72@2x.png",
-				"Icon-76.png",
-				"Icon-76@2x.png",
-				"Icon-Small.png",
-				"Icon-Small@2x.png",
-				"Icon-Small@3x.png",
-				"Icon-Small-40.png",
-				"Icon-Small-40@2x.png",
-				"Icon-Small-50.png",
-				"Icon-Small-50@2x.png",
+				"imgs/icons/Icon.png",
+				"imgs/icons/Icon@2x.png",
+				"imgs/icons/Icon-167.png",
+				"imgs/icons/Icon-60.png",
+				"imgs/icons/Icon-60@2x.png",
+				"imgs/icons/Icon-60@3x.png",
+				"imgs/icons/Icon-72.png",
+				"imgs/icons/Icon-72@2x.png",
+				"imgs/icons/Icon-76.png",
+				"imgs/icons/Icon-76@2x.png",
+				"imgs/icons/Icon-Small.png",
+				"imgs/icons/Icon-Small@2x.png",
+				"imgs/icons/Icon-Small@3x.png",
+				"imgs/icons/Icon-Small-40.png",
+				"imgs/icons/Icon-Small-40@2x.png",
+				"imgs/icons/Icon-Small-50.png",
+				"imgs/icons/Icon-Small-50@2x.png",
 			},
 		},
 	},
-	
+
 	--
 	-- Android Section
 	--
